updated the footer to refer to bbc2-examples.

--- a/certify/cert/templates/cert/layout.html
+++ b/certify/cert/templates/cert/layout.html
@@ -44,8 +44,8 @@ function downloadCertificate() {
 <hr>
 <p>
 This service is based on
-<a href="https://github.com/beyond-blockchain/examples/tree/master/certify-web">certify-web</a>,
-an open source sample program for BBc-1 (Beyond Blockchain One).
+<a href="https://github.com/beyond-blockchain/bbc2-examples/tree/develop/certify">certify</a>,
+an open source sample program for BBc-2 (Beyond Blockchain Two).
 </p>
 <p class="resizeimage" align="center">
 <img src="https://beyond-blockchain.org/public/beyond-blockchain-org-logo.png" alt="BBc logo"><br/>
